--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "BaiTapLon_TBDD",
-    "slug": "BaiTapLon_TBDD",
+    "name": "E-commerceMarket",
+    "slug": "E-commerceMarket",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
